<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeSearchMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/design_default_color_primary"
        android:elevation="1dp" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/search_button_text"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="recipe"
        android:background="@drawable/border"
        android:hint="@string/recipe_edit_text_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/SearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SearchButton"
        app:layout_constraintTop_toTopOf="@+id/SearchButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ViewSavedButton"
        app:layout_constraintTop_toBottomOf="@+id/SearchButton" />

    <Button
        android:id="@+id/ViewSavedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/view_saved_recipes_button"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>