<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SunsetSunriseMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/SunsetSunriseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SunsetSunriseMain">


        <EditText
            android:inputType="numberDecimal|numberSigned"
            android:id="@+id/latitudeInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="-90 to 90"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <EditText
            android:inputType="numberDecimal|numberSigned"
            android:id="@+id/longitudeInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="-180 to 180"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <Button
            android:id="@+id/Search_button"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/enterLatitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/enterLongitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SunsetSunrise_recycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Search_button" />

        <Button
            android:id="@+id/Save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveYourFavorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>